<resources>
    <string name="app_name">StudentNote</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="mail">Mail(*)</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="mdp_oublie">Mot de passe oublié?</string>
    <string name="title_activity_connection">Connection</string>
    <string name="view_nom">Nom(*)</string>
    <string name="view_prenom">Prenom(*)</string>
    <string name="view_confirm">Confirmez votre mot de pass</string>
    <string name="view_mdp">Votre mot de passe(*)</string>
    <string name="view_inscription">Inscription</string>
    <string name="view_terme_condition">J\'ai lu et accepté les termes et conditions d\'utilisation</string>
    <string name="view_telephone">Telephone</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_informations">Informations</string>
    <string name="menu_administrer">Administrer</string>
    <string name="menu_profil">Profil</string>
    <string name="p_nom">Nom</string>
    <string name="p_telephone">Telephone</string>
    <string name="p_mail">Mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    For chat    -->
    <string name="no_users_found">No users found!</string>
    <string name="login">Login</string>
    <string name="enter_username">enter username</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="write_a_message">Ecrire votre message</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="enter_password">enter password</string>
    <string name="register">Register</string>


    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_table_emplois">TableEmplois</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_chat_profil">ChatProfil</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>
